--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,10 +13,16 @@ jobs:
     
     steps:
       - checkout
+      - run: 
+         name: "Git install"
+         command: "sudo apt install git" 
+
+
       - run:
           name: "Terraform init"
           command: "terraform init"
       
+
       - run: 
           name: "Spin up EC2"
           command: "terraform apply  -auto-approve"
