--- a/aws_ec2.yml
+++ b/aws_ec2.yml
@@ -4,6 +4,7 @@ plugin: aws_ec2
 regions: sa-east-1
 
 hostnames:
+  - 'tag:Name'
   - 'tag:Name' 
 compose:
   ansible_host: instance_id, public_ip_address, tag_name_Jenkins
