--- a/aws_ec2.yml
+++ b/aws_ec2.yml
@@ -3,8 +3,11 @@ plugin: aws_ec2
 
 regions: sa-east-1
 
+filters:
+  tag:env:
+    - Jenkins
 hostnames:
-  - 'tag:Name'
   - 'tag:Name' 
+  -  network-interface.association.public-ip
 compose:
   ansible_host: instance_id, public_ip_address, tag_name_Jenkins
