--- a/aws_ec2.yml
+++ b/aws_ec2.yml
@@ -4,5 +4,5 @@ plugin: aws_ec2
 regions: sa-east-1
 
 hostnames:
-  - tag:name=value
+  - tag:name=Jenkins
   - network-interface.association.public-ip
