--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,7 +33,7 @@ jobs:
       
       - run: 
           name: "Spin up EC2"
-          command: "terraform apply -auto-approve"
+          command: "terraform destroy -auto-approve"
       
 #      - run:
 #          name: "Python3 && Boto"
