--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,13 +19,13 @@ jobs:
          name: "Git install"
          command: "apt install git -y" 
 
-#      - run: 
-#         name: "Ansible installing"
-#         command: "apt install ansible -y"
+      - run: 
+         name: "Ansible installing"
+         command: "apt install ansible -y"
       
-#      - run:
-#         name: "Ansible installing package aws"
-#         command: "ansible-galaxy collection install amazon.aws"   
+      - run:
+         name: "Ansible installing package aws"
+         command: "ansible-galaxy collection install amazon.aws"   
       
       - run:
           name: "Terraform init"
@@ -33,11 +33,11 @@ jobs:
       
       - run: 
           name: "Spin up EC2"
-          command: "terraform destroy -auto-approve"
+          command: "terraform apply -auto-approve"
       
-#      - run:
-#          name: "Python3 && Boto"
-#          command: "apt install python3 -y && apt install python3-pip && pip install boto3"
+      - run:
+          name: "Python3 && Boto"
+          command: "apt install python3 -y && apt install python3-pip && pip install boto3"
 
 #      - run:
 #         name: "Ansible list inventory"   
