--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,10 +9,16 @@ jobs:
     environment:
         aws_access_key_id: AWS_ACCESS_KEY_ID
         aws_secret_access_key: AWS_SECRET_ACCESS_KEY
-        aws_default_region: AWS_DEFAULT_REGION 
+        aws_default_region: AWS_DEFAULT_REGION
+
         
     
     steps:
+      - add_ssh_keys:
+          fingerprints:
+           - "28:04:a8:00:6e:c7:52:2a:98:9e:ad:7a:9c:4a:7d:34"
+            
+    
       
       - checkout
       - run: 
@@ -39,9 +45,17 @@ jobs:
           name: "Python3 && Boto"
           command: "apt install python3 -y && apt install python3-pip && pip install boto3"
 
+      - run:
+         name: "Ansible list inventory"   
+         command: "ansible-inventory -i aws_ec2.yml --list" 
+      
+      - run:
+          name: "Ansible ping"
+          command: "ansible all -m ping"
+      
 #      - run:
-#         name: "Ansible list inventory"   
-#         command: "ansible-inventory -i aws_ec2.yml --list"          
+#          name: "s"
+#          command: "a"
 
 workflows:
   say-hello-workflow:
