--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,11 +47,11 @@ jobs:
 
       - run:
          name: "Ansible list inventory"   
-         command: "ansible-inventory -i aws_ec2.yml --list" 
+         command: "ansible-inventory -i aws_ec2.yml --graph" 
       
-      - run:
-          name: "Ansible ping"
-          command: "ansible -i aws_ec2.yml -m ping"
+#      - run:
+#          name: "Ansible ping"
+#          command: "ansible -i aws_ec2.yml -m ping"
       
 #      - run:
 #          name: "s"
