--- a/inventory.aws_ec2.yml
+++ b/inventory.aws_ec2.yml
@@ -3,9 +3,9 @@ plugin: aws_ec2
 
 regions: sa-east-1
 
-hostnames:
-  - tag:name=Jenkins
-  - network-interface.association.public-ip
+#hostnames:
+#  - tag:name=Jenkins
+#  - network-interface.association.public-ip
 
 keyed_groups:
   - key: tags
