--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,7 +52,9 @@ jobs:
       - run:
           name: "Ansible ping"
           command: "ansible -vvvv -i inventory.aws_ec2.yml tag_name_Jenkins -u ubuntu --ssh-common-args='-o StrictHostKeyChecking=no' -m 'ping' "
-      
+      - run: 
+         name: "Playbook apply"
+         command: "ansible-playbook -i inventory.aws_ec2.yml tag_name_Jenkins -u ubuntu --ssh-common-args='-o StrictHostKeyChecking=no' site.yml"
 #      - run:
 #          name: "s"
 #          command: "a"
