--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,12 +52,12 @@ jobs:
       - run:
           name: "Ansible ping"
           command: "ansible -vvvv -i inventory.aws_ec2.yml tag_name_Jenkins -u ubuntu --ssh-common-args='-o StrictHostKeyChecking=no' -m 'ping' "
+
       - run: 
          name: "Playbook apply"
-         command: "ansible-playbook -i inventory.aws_ec2.yml tag_name_Jenkins -u ubuntu --ssh-common-args='-o StrictHostKeyChecking=no' site.yml"
-#      - run:
-#          name: "s"
-#          command: "a"
+         command: |
+          ls
+          ansible-playbook -i inventory.aws_ec2.yml tag_name_Jenkins -u ubuntu --ssh-common-args='-o StrictHostKeyChecking=no' site.yml
 
 workflows:
   say-hello-workflow:
