--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,7 +39,7 @@ jobs:
       
       - run: 
           name: "Spin up EC2"
-          command: "terraform destroy -auto-approve"
+          command: "terraform apply -auto-approve"
       
       - run:
           name: "Python3 && Boto"
