--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,9 +49,9 @@ jobs:
          name: "Ansible list inventory"   
          command: "ansible-inventory -i inventory.aws_ec2.yml --graph" 
       
-      - run:
-          name: "Ansible ping"
-          command: ansible -vvvv -i inventory.aws_ec2.yml tag_name_Jenkins -u ubuntu --ssh-common-args='-o StrictHostKeyChecking=no' site.yml
+#      - run:
+#          name: "Ansible ping"
+#          command: ansible -vvvv -i inventory.aws_ec2.yml tag_name_Jenkins -u ubuntu --ssh-common-args='-o StrictHostKeyChecking=no' site.yml
 
       - run: 
          name: "Playbook apply"
